crates/keron-lang/tests/corpus/errors/check/int_to_string.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `String`, found `Int`
  --> 1:17
  |
1 | val a: String = 1
  |                 ^
